# data-school-Spring23

./: .gitignore  README.md
lab material/: dna.py  dna_correct.py  test_dna_count.py  test_dna_count_skeleton.py
publishing/LinearRegressor/: README.md  coeffs.npy  model_coefficients.npy  pyproject.toml  scratch.ipynb  test_data.csv
publishing/LinearRegressor/linear_regressor/: __init__.py  cli.py  linear_regressor.py
publishing/LinearRegressor/linear_regressor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
publishing/LinearRegressor/tests/: test_dataset.py  test_linear_regressor.py
